jvm: parse -Xlog:gc* unified GC logs into a pause summary (#442)
GC-log handling was entirely absent — the gc-pressure rule worked only from
cumulative jstat counters, with no per-pause/per-cause view.

- internal/gclog: Parse(io.Reader)/ParseFile parse G1/Parallel/Serial 'Pause ...'
  lines into per-pause records and an aggregate Summary (count, total/max/avg
  pause, Full/young/mixed, System.gc(), evacuation failures, causes, longest
  pause). Lenient: non-pause and concurrent-phase lines are ignored.
- spectra jvm gc-log [--json] <file> prints the summary, on-demand like jfr
  summary / heap-hprof (GC logs can be large; not an every-snapshot collector).

Tests cover the parser over a mixed fixture (young/full, System.gc(), to-space
exhausted, K/M/G units, ignored lines) and the CLI renderer. Docs updated.

Closes #441